# KonstZiv_ai-code-reviewer

./: .env.example  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCKERHUB_README.md  Dockerfile  FILE_UPDATES_SUMMARY.md  GITHUB_SETUP.md  HOW_TO_APPLY.md  LICENSE  Makefile  PEP735_MIGRATION.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP_SUMMARY.md  action.yml  coverage.xml  mkdocs.yml  pyproject.toml  сценарії-використання.md
.backups/: GITHUB_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yml  docs.yml  release.yml  tests.yml
CURRENT_TASK/: FUTURE_SPRINTS.md  PROCESS_TASK.md  PROCESS_TASK_UA.md  QA_TEST_SCENARIOS.md  REVIEW_GATE.md  SPRINT.md  TASK_DESCRIPTION.md  TASK_DESCRIPTION_UA.md
CURRENT_TASK/phase-1-abstractions/: EPIC.md
CURRENT_TASK/phase-1-abstractions/task-1.1-llm-provider/: IMPLEMENTATION.md
CURRENT_TASK/phase-1-abstractions/task-1.2-repository-provider/: TASK.md
CURRENT_TASK/phase-1-abstractions/task-1.3-conversation-provider/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-1-discovery-engine/: EPIC.md
CURRENT_TASK/phase-1-discovery-engine/task-1.1-raw-data-enrichment/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-1-discovery-engine/task-1.2-llm-analysis-prompt/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-1-discovery-engine/task-1.3-watch-files-caching/: TASK.md
CURRENT_TASK/phase-1-discovery-engine/task-1.4-mr-aware-discovery/: TASK.md
CURRENT_TASK/phase-1-discovery-quality/: EPIC.md
CURRENT_TASK/phase-1-discovery-quality/task-1.1-config-enrichment/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-1-discovery-quality/task-1.2-go-modules/: TASK.md
CURRENT_TASK/phase-1-discovery-quality/task-1.3-file-tree-truncation/: TASK.md
CURRENT_TASK/phase-2-discovery-engine/: EPIC.md
CURRENT_TASK/phase-2-discovery-engine/task-2.1-discovery-models/: TASK.md
CURRENT_TASK/phase-2-discovery-engine/task-2.2-ci-analyzer/: IMPLEMENTATION.md
CURRENT_TASK/phase-2-discovery-engine/task-2.3-config-collection/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-2-discovery-engine/task-2.5-discovery-prompts/: IMPLEMENTATION.md
CURRENT_TASK/phase-2-discovery-engine/task-2.6-discovery-orchestrator/: TASK.md
CURRENT_TASK/phase-2-housekeeping/: EPIC.md
CURRENT_TASK/phase-2-housekeeping/task-2.1-dead-deps/: TASK.md
CURRENT_TASK/phase-2-housekeeping/task-2.2-env-cleanup/: TASK.md
CURRENT_TASK/phase-2-housekeeping/task-2.3-roadmap-fix/: TASK.md
CURRENT_TASK/phase-2-housekeeping/task-2.4-raw-yaml-sanitize/: TASK.md
CURRENT_TASK/phase-2-review-integration/: EPIC.md
CURRENT_TASK/phase-2-review-integration/task-2.1-dynamic-system-prompt/: TASK.md
CURRENT_TASK/phase-2-review-integration/task-2.2-discovery-comment/: TASK.md
CURRENT_TASK/phase-3-housekeeping/: EPIC.md
CURRENT_TASK/phase-3-integration/: EPIC.md
CURRENT_TASK/phase-3-integration/task-3.1-prompt-integration/: IMPLEMENTATION.md
CURRENT_TASK/phase-3-integration/task-3.2-reviewer-integration/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-3-integration/task-3.3-discovery-comment/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-3-reliability/: EPIC.md
CURRENT_TASK/phase-3-reliability/task-3.1-discovery-timeout/: TASK.md
CURRENT_TASK/phase-3-reliability/task-3.2-shared-fixtures/: TASK.md
CURRENT_TASK/phase-3-reliability/task-3.3-type-fixes/: TASK.md
CURRENT_TASK/phase-4-polish/: EPIC.md
CURRENT_TASK/phase-4-polish/task-4.1-reliability/: TASK.md
CURRENT_TASK/phase-4-polish/task-4.1-test-fixtures/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-4-polish/task-4.2-discover-cli/: TASK.md
CURRENT_TASK/phase-4-polish/task-4.2-edge-cases/: IMPLEMENTATION.md
CURRENT_TASK/phase-4-polish/task-4.3-docs-gate/: TASK.md
CURRENT_TASK/phase-4-polish/task-4.3-documentation/: IMPLEMENTATION.md  TASK.md
CURRENT_TASK/phase-4-user-experience/: EPIC.md
CURRENT_TASK/phase-4-user-experience/task-4.1-discover-cli/: TASK.md
CURRENT_TASK/phase-4-user-experience/task-4.2-verbose-mode/: TASK.md
CURRENT_TASK/phase-4-user-experience/task-4.3-review-gate-docs/: TASK.md
GENERAL_PROJECT_DESCRIPTION/: CONTRIBUTING.md  PROCESS_PROJECT.md  PROJECT_CANVAS.md
config/deployment/enterprise/: config.yml
config/deployment/quick-start/: config.yml
config/deployment/small-team/: config.yml
docs/: index.md
docs/de/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/de/examples/: github-advanced.md  github-minimal.md  gitlab-advanced.md  gitlab-minimal.md
docs/en/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/en/examples/: github-advanced.md  github-minimal.md  gitlab-advanced.md  gitlab-minimal.md
docs/es/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/es/examples/: github-advanced.md  github-minimal.md  (+2 more)
docs/guides/: github-actions.md
docs/it/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/sr/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
docs/uk/: api.md  configuration.md  discovery.md  github.md  gitlab.md  index.md  installation.md  quick-start.md  troubleshooting.md
examples/: .reviewbot.md  README.md  github-workflow.yml  gitlab-ci.yml
old-doc/: ROADMAP.md
old-doc/sprint-0/: SPRINT.md  sprint-beta-0-after-review.md
src/ai_reviewer/: cli.py  reviewer.py
tests/: conftest.py  helpers.py
tests/e2e/: test_review_flow.py
tests/integration/: test_discovery_fixtures.py  test_gemini.py  test_github.py  test_gitlab.py
tests/unit/: test_base.py  test_cli.py  test_config.py  test_conversation_provider.py  test_formatter.py  test_key_pool.py  test_language.py  test_models.py  test_prompts.py  test_repository_provider.py  test_retry.py  test_reviewer.py  test_split_review.py
(+95 files in other folders)
