[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = "AI-powered code review agent for CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Code Reviewer Team" }
]
keywords = ["code-review", "ai", "llm", "ci-cd", "gitlab", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM Orchestration
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    
    # LLM Providers
    "langchain-anthropic>=0.1.0",      # Claude
    "langchain-openai>=0.0.5",         # GPT
    "langchain-google-genai>=0.0.5",   # Gemini
    "anthropic>=0.8.0",                # Direct Anthropic SDK
    "openai>=1.0.0",                   # Direct OpenAI SDK
    "google-generativeai>=0.3.0",      # Direct Google SDK
    
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    
    # HTTP & APIs
    "httpx>=0.25.0",
    "python-gitlab>=4.0.0",
    "PyGithub>=2.0.0",
    
    # Git operations
    "GitPython>=3.1.0",
    
    # Config & Environment
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    
    # CLI & Output
    "rich>=13.0.0",
    "typer>=0.9.0",  # Alternative to Click, better for complex CLIs
    
    # Async
    "asyncio>=3.4.3",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",  # Backup if ruff format doesn't work
    
    # Type stubs
    "types-PyYAML",
    "types-requests",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    
    # Development tools
    "ipython>=8.17.0",
    "ipdb>=0.13.13",
]

local-llm = [
    # Local LLM support (optional, for Phase 3)
    "langchain-community>=0.0.20",
    "ollama>=0.1.0",
]

all = [
    "ai-code-reviewer[dev,local-llm]",
]

[project.scripts]
ai-review = "ai_reviewer.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/ai-code-reviewer"
Documentation = "https://ai-code-reviewer.readthedocs.io"
Repository = "https://github.com/your-org/ai-code-reviewer"
Issues = "https://github.com/your-org/ai-code-reviewer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_reviewer"]

# === Ruff Configuration ===
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "D",       # pydocstyle (we use Google style, not numpy)
    "COM812",  # Trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused arguments OK in tests
    "PLR2004", # Magic values OK in tests
    "S101",    # Assert OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["ai_reviewer"]

[tool.ruff.lint.flake8-type-checking]
strict = true

# === MyPy Configuration ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict = true

[[tool.mypy.overrides]]
module = [
    "gitlab.*",
    "github.*",
    "anthropic.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ai_reviewer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: Integration tests (may call external APIs)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow tests (>1s)",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/ai_reviewer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# === Black Configuration (backup) ===
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
